// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader component render correctly Should Loader component medium size render correctly 1`] = `
<div
  className="loader-wrapper"
  style={
    Object {
      "position": "absolute",
    }
  }
>
  <div
    className="loader medium"
  />
</div>
`;

exports[`Loader component render correctly Should Loader component small size render correctly 1`] = `
<div
  className="loader-wrapper"
  style={
    Object {
      "position": "absolute",
    }
  }
>
  <div
    className="loader small"
  />
</div>
`;
